Fix bug on Firefox

--- a/src/demo/App.scss
+++ b/src/demo/App.scss
@@ -21,7 +21,7 @@
                 margin-left: 10px;
                 font-size: 14px;
                 select {
-                    width: 230px;
+                    width: 200px;
                 }
                 form {
                     span {
